# lab1_oop_var14

./: CMakeLists.txt  README.md
include/: string_utils.h
src/: func.cpp  main.cpp
tests/: func_test.cpp
